k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-sandbox-service
  labels:
    app: devops-sandbox
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: devops-sandbox
